--- a/infrastructure/docker-compose.prod.yml
+++ b/infrastructure/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Nginx reverse proxy
   nginx:
@@ -18,18 +16,18 @@ services:
   # Frontend service
   frontend:
     build:
-      context: ../frontend
-      dockerfile: ../infrastructure/Dockerfile.frontend
+      context: ..
+      dockerfile: ./infrastructure/Dockerfile.frontend.fixed
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=https://example.com/api
+      - NEXT_PUBLIC_API_URL=http://backend:3001/api
     restart: always
 
   # Backend API service
   backend:
     build:
-      context: ../backend
-      dockerfile: ../infrastructure/Dockerfile.backend
+      context: ..
+      dockerfile: ./infrastructure/Dockerfile.backend.fixed
     volumes:
       - backend_uploads:/app/uploads
     environment:
