--- a/infrastructure/Dockerfile.frontend.fixed
+++ b/infrastructure/Dockerfile.frontend.fixed
@@ -25,7 +25,9 @@ RUN npm ci --only=production
 # Copy built app from build stage
 COPY --from=build /app/.next ./.next
 COPY --from=build /app/public ./public
-COPY --from=build /app/next.config.js ./next.config.js
+
+# Try to copy next.config.js but don't fail if it doesn't exist
+COPY --from=build /app/next.config.js ./next.config.js || true
 
 # Set environment variables
 ENV NODE_ENV=production
