--- a/infrastructure/Dockerfile.backend.fixed
+++ b/infrastructure/Dockerfile.backend.fixed
@@ -3,6 +3,9 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Install OpenSSL for Prisma
+RUN apk add --no-cache openssl
+
 # Copy package files and install dependencies
 COPY backend/package*.json ./
 RUN npm ci
