--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
+    "test:simple": "jest tests/no-setup.test.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
@@ -24,7 +25,7 @@
   "devDependencies": {
     "prisma": "^5.2.0",
     "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
 }
